    character only when followed by one of the following characters:
    $ ` " \ <newline>
    [Bug #10055]

* Time

  * Time#to_time now preserves timezone.  [Bug #12271]

* thread

  * the extension library is removed.  Till 2.0 it was a pure ruby script
    "thread.rb", which has precedence over "thread.so", and has been provided
    in $LOADED_FEATURES since 2.1.

* Tk

  * Tk is removed from stdlib.  [Feature #8539]
    https://github.com/ruby/tk is the new upstream.

* XMLRPC

  * XMLRPC is removed from stdlib. [Feature #12160][ruby-core:74239]
    https://github.com/ruby/xmlrpc is the new upstream.

=== C API updates

* ruby_show_version() will no longer exits the process, if
  RUBY_SHOW_COPYRIGHT_TO_DIE is set to 0.  This will be the default in
  the future.

* rb_gc_adjust_memory_usage() [Feature #12690]

=== Supported platform changes

* FreeBSD < 4 is no longer supported

=== Implementation improvements

* In some condition, `[x, y].max` and `[x, y].min` are optimized
  so that a temporal array is not created.  The concrete condition is
  an implementation detail: currently, the array literal must have no
  splat, must have at least one expression but literal, the length must
  be <= 0x100, and Array#max and min must not be redefined.  It will work
  in most casual and real-life use case where it is written with intent
  to `Math.max(x, y)`.

* Thread deadlock detection now shows their backtrace and dependency. [Feature #8214]

* st_table (st.c) internal data structure is improved. [Feature #12142]

* Rational is extensively optimized. [Feature #12484]

=== Miscellaneous changes

* ChangeLog is removed from the repository.
  It is generated from commit messages in Subversion by `make dist`.
  Also note that now people should follow Git style commit message.
  The template is written at
  [Short (50 chars or less) summary of changes](https://git-scm.com/book/ch5-2.html).
  [Feature #12283]