@@ -343,6 +343,10 @@ with all sufficient information, see the ChangeLog file or Redmine
   * XMLRPC is removed from stdlib. [Feature #12160][ruby-core:74239]
     https://github.com/ruby/xmlrpc is the new upstream.
 
+* Zlib
+
+  * Zlib.gzip and Zlib.gunzip [Feature #13020]
+
 === C API updates
 
 * ruby_show_version() will no longer exits the process, if
